# glxgears-haskell

./: LICENSE  README.md  glxgears-haskell.cabal
gears/: Gear.hs  Main.hs  testGear.hs
heart/: Heart.hs  Main.hs  QuadCommon.hs  ViewRotation.hs
