name:                glxgears-haskell
version:             0.1.0.0
synopsis:            GlxGears demo in Haskell OpenGL / GLFW
-- description:
license:             MIT
license-file:        LICENSE
author:              Martin Taranza
maintainer:          trin.cz@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable glxgears-haskell
  main-is:             Main.hs
  hs-source-dirs:      gears
  build-depends:       base >=4.8 && <5,
                       mtl >= 2.2.1,
                       transformers,
                       monad-control,
                       OpenGL,
                       GLUT,
                       old-time
  default-language:    Haskell2010
  ghc-options:         -Wall -rtsopts -O2 -threaded -dynamic
  ghc-prof-options:    -fprof-auto -caf-all
  extensions: FlexibleContexts

executable glxheart-haskell
  main-is:             Main.hs
  hs-source-dirs:      heart
  build-depends:       base >=4.8 && <5,
                       mtl >= 2.2.1,
                       transformers,
                       monad-control,
                       OpenGL,
                       GLUT,
                       array
  default-language:    Haskell2010
  ghc-options:         -Wall -rtsopts -O2 -threaded -dynamic
  ghc-prof-options:    -fprof-auto -caf-all
  extensions: FlexibleContexts
